--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "prettier": "^3.0.1"
+  },
+  "dependencies": {
+    "commander": "^11.0.0"
   }
 }
