--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prettier": "^3.0.1"
   },
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
   }
 }
