--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,7 @@ env:
   es2021: true
 extends: airbnb-base
 parserOptions:
-  ecmaVersion: latest
+  ecmaVersion: 2020
   sourceType: module
 rules:
   no-console: 0
@@ -11,3 +11,4 @@ rules:
     - error
     # - ignorePackages
     - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
