--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "@hexlet/code",
+  "jest": {
+    "verbose": true
+  },
   "version": "1.0.0",
+  "type": "module",
   "description": "Second project",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
     "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
+    "jest": "^29.6.2",
     "prettier": "^3.0.1"
   },
   "dependencies": {
